--- a/spring-ioc-project/pom.xml
+++ b/spring-ioc-project/pom.xml
@@ -7,7 +7,7 @@
   	<dependency>
   		<groupId>org.springframework</groupId>
   		<artifactId>spring-webmvc</artifactId>
-  		<version>5.2.4.RELEASE</version>
+  		<version>5.3.29</version>
   	</dependency>
   	<dependency>
   		<groupId>org.slf4j</groupId>
@@ -24,5 +24,25 @@
   		<artifactId>slf4j-simple</artifactId>
   		<version>2.0.0-alpha0</version>
   	</dependency>
+  	<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+	<dependency>
+	    <groupId>javax.servlet</groupId>
+	    <artifactId>javax.servlet-api</artifactId>
+	    <version>4.0.1</version>
+	    <scope>provided</scope>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+	<dependency>
+	    <groupId>org.projectlombok</groupId>
+	    <artifactId>lombok</artifactId>
+	    <version>1.18.30</version>
+	    <scope>provided</scope>
+	</dependency>
+  	<!-- https://mvnrepository.com/artifact/jstl/jstl -->
+	<dependency>
+	    <groupId>jstl</groupId>
+	    <artifactId>jstl</artifactId>
+	    <version>1.2</version>
+	</dependency>
   </dependencies>
 </project>
