--- a/spring-ioc-project/pom.xml
+++ b/spring-ioc-project/pom.xml
@@ -44,5 +44,31 @@
 	    <artifactId>jstl</artifactId>
 	    <version>1.2</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api -->
+	<dependency>
+	    <groupId>jakarta.servlet</groupId>
+	    <artifactId>jakarta.servlet-api</artifactId>
+	    <version>6.0.0</version>
+	    <scope>provided</scope>
+	</dependency>
   </dependencies>
+    <build>
+	<plugins>
+      	<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+    		<artifactId>maven-compiler-plugin</artifactId>
+    		<version>3.8.1</version>
+    		<configuration>
+    			<source>17</source>
+    			<target>17</target>
+    		</configuration>
+    	</plugin>
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-war-plugin</artifactId>
+  			<version>3.2.3</version>
+  		</plugin>
+  	</plugins>
+    <finalName>SpringIocProject</finalName>
+  </build>
 </project>
