--- a/spring-ioc-project/src/main/webapp/WEB-INF/web.xml
+++ b/spring-ioc-project/src/main/webapp/WEB-INF/web.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" version="4.0">
   <display-name>spring-ioc-project</display-name>
- 	<listener>
-  		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+ 	<!-- <listener>
+  		  <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   	</listener>
 	
 	<context-param>
   		<param-name>contextConfigLocation</param-name>
   		<param-value>/WEB-INF/spring/applicationContext.xml</param-value>
-  	</context-param>
+  	</context-param> -->
   	
    <servlet>  
        <servlet-name>dispatcher</servlet-name>  
